base/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: blue
spec:
  parentRefs:
    - name: blue
      kind: Service
      group: core
      port: 80
  rules: {}
